cmake_minimum_required(VERSION 3.27)
project(CPP_ProblemSolving)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP_ProblemSolving
        "codeForces/Easy/Anton and Danik.cpp"
        "codeForces/Easy/Vanya and Fence.cpp"
        codeWars/8KY/boolean_to_string.cpp
        codeWars/8KY/centuryFromYear.cpp
        codeWars/8KY/even_or_odd.cpp
        codeWars/8KY/how_much_i_love_you.cpp
        codeWars/8KY/invertValues.cpp
        codeWars/8KY/isDivisible.cpp
        codeWars/8KY/isUpperCase.cpp
        codeWars/8KY/mango.cpp
        codeWars/8KY/quarter_of_the_year.cpp
        codeWars/8KY/reverseString.cpp
        codeWars/8KY/simpleMultiplication.cpp
        DSA/CircularQueue.cpp
        DSA/LinkedLists.cpp
        DSA/Maps.cpp
        DSA/Mix.cpp
        DSA/pointers.cpp
        DSA/QueueLinkedList.cpp
        DSA/SimpleQueue.cpp
        DSA/Stack.cpp
        DSA/StackInLinkedLists.cpp
        DSA/Struct.cpp
        DSA/Union.cpp
        "Edabit/Easy/Are the Numbers Equal.cpp"
        "Edabit/Easy/Area of a Triangle.cpp"
        Edabit/Easy/BasicVariableAssignment.cpp
        Edabit/Easy/BasketballPoints.cpp
        "Edabit/Easy/Boolean to String Conversion.cpp"
        Edabit/Easy/BuggyCode.cpp
        "Edabit/Easy/Check if an Integer is Divisible By Five.cpp"
        "Edabit/Easy/Convert Hours into Seconds.cpp"
        "Edabit/Easy/Convert Minutes into Seconds.cpp"
        "Edabit/Easy/Drinks Allowed.cpp"
        Edabit/Easy/EqualStack.cpp
        "Edabit/Easy/Find the Perimeter of a Rectangle.cpp"
        "Edabit/Easy/Flip the int Boolean.cpp"
        "Edabit/Easy/Insert a node at the head of a linked list.cpp"
        "Edabit/Easy/Is it Time for Milk and Cookies.cpp"
        "Edabit/Easy/Is the Array Empty.cpp"
        "Edabit/Easy/Multiple of 100.cpp"
        "Edabit/Easy/Power Calculator.cpp"
        "Edabit/Easy/Return Negative.cpp"
        "Edabit/Easy/Return Something to Me.cpp"
        "Edabit/Easy/Return the Sum of Two Numbers.cpp"
        "Edabit/Easy/Reverse Psychology.cpp"
        Edabit/Easy/StackTheBoxes.cpp
        "Edabit/Easy/Sum of Polygon Angles.cpp"
        Edabit/Easy/sum.cpp
        "Edabit/Easy/Using the && Operator.cpp"
        hackerRank/Easy/BasicDataTypes.cpp
        hackerRank/Easy/hello.cpp
        hackerRank/Easy/ifConditional.cpp
        hackerRank/Easy/inputOutput.cpp
        LeetCode/Easy/binarySearch.cpp
        "LeetCode/Easy/Greatest Common Divisor of Strings.cpp"
        LeetCode/Easy/longestCommonPrefix.cpp
        "LeetCode/Easy/Merge Strings Alternately.cpp"
        LeetCode/Easy/TwoSum.cpp
        "LeetCode/Easy/Valid Parentheses.cpp"
        Mix/balancedParentheses.cpp)
